# point_charge_symmetry

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CoordinateSystem_8h_source.html  Dockerfile  Group_8h_source.html  Molecule_8h_source.html  Operator_8h_source.html  Projector_8h_source.html  README.md  SymmetryMeasureC_8h_source.html  SymmetryMeasure_8h_source.html  annotated.html  annotated.js  chemspider-xyz.py  classmolpro_1_1point__charge__symmetry_1_1CoordinateSystem-members.html  classmolpro_1_1point__charge__symmetry_1_1CoordinateSystem.html  classmolpro_1_1point__charge__symmetry_1_1CoordinateSystem.js  classmolpro_1_1point__charge__symmetry_1_1Group-members.html  classmolpro_1_1point__charge__symmetry_1_1Group.html  classmolpro_1_1point__charge__symmetry_1_1Group.js  classmolpro_1_1point__charge__symmetry_1_1Group__coll__graph.map  classmolpro_1_1point__charge__symmetry_1_1Group__coll__graph.md5  classmolpro_1_1point__charge__symmetry_1_1Identity-members.html  classmolpro_1_1point__charge__symmetry_1_1Identity.html  classmolpro_1_1point__charge__symmetry_1_1Identity.js  classmolpro_1_1point__charge__symmetry_1_1Identity__coll__graph.map  classmolpro_1_1point__charge__symmetry_1_1Identity__coll__graph.md5  classmolpro_1_1point__charge__symmetry_1_1Identity__inherit__graph.map  classmolpro_1_1point__charge__symmetry_1_1Identity__inherit__graph.md5  classmolpro_1_1point__charge__symmetry_1_1Inversion-members.html  classmolpro_1_1point__charge__symmetry_1_1Inversion.html  classmolpro_1_1point__charge__symmetry_1_1Inversion.js  classmolpro_1_1point__charge__symmetry_1_1Inversion__coll__graph.map  classmolpro_1_1point__charge__symmetry_1_1Inversion__coll__graph.md5  classmolpro_1_1point__charge__symmetry_1_1Inversion__inherit__graph.map  classmolpro_1_1point__charge__symmetry_1_1Inversion__inherit__graph.md5  classmolpro_1_1point__charge__symmetry_1_1Molecule-members.html  classmolpro_1_1point__charge__symmetry_1_1Molecule.html  classmolpro_1_1point__charge__symmetry_1_1Molecule.js  (+56 more)
DoxygenTagFiles/: point_charge_symmetry.tag  utilities.tag
dependencies/: CMakeLists.txt  LinearAlgebra_SHA1
doc/: CMakeLists.txt
docker/: Dockerfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  (+48 more)
src/: CMakeLists.txt  program.cpp  symmetry_measure.cpp
src/molpro/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  SymmetryOperator.cpp  SymmetryOperator.h
src/molpro/point_charge_symmetry/: CMakeLists.txt  CoordinateSystem.cpp  CoordinateSystem.h  Euler.cpp  Euler.h  Group.cpp  Group.h  Molecule.cpp  Molecule.h  Operator.cpp  Operator.h  Problem_refine.h  Projector.cpp  Projector.h  SolverFactory-instantiation.cpp  SymmetryMeasure.cpp  SymmetryMeasure.h  SymmetryMeasureC.cpp  SymmetryMeasureC.h  SymmetryOperator.cpp  SymmetryOperator.h  factory.cpp  point_charge_symmetry.F90  point_charge_symmetry_Operator.cpp
src/molpro/point_charge_symmetry/util/: Problem_refine.h
test/: 18-crown.xyz  CMakeLists.txt  Ferrocene.xyz  Icosahedron.xyz  adamantane.xyz  allene.xyz  allene45.xyz  ar.xyz  benzene.xyz  buckminsterfullerene.xyz  c60.xyz  c60_clean.xyz  c60_from_klaus.xyz  ch4.xyz  co.xyz  co2-bent.xyz  co2.xyz  cyclohexane.xyz  dummy.xyz  ethane.xyz  ethene.xyz  ferrocene-2.xyz  h2o-nosym.xyz  h2o.xyz  hexamethylbenzene.xyz  methane.xyz  n2-displaced.xyz  n2.xyz  p4.xyz  pentagonx.xyz  phloroglucinol.xyz  s8.xyz  sulfur-hexafluoride.xyz  test-bfgs.cpp  test-point_charge_symmetry.cpp  waterinf.xyz
